--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes blink {
+  0% { opacity: 0; }
+  50% { opacity: 1; }
+  100% { opacity: 0; }
+}
+
+
+.animate-blink {
+  animation: blink 1s infinite;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
